--- a/training/templates/training/training_detail.html
+++ b/training/templates/training/training_detail.html
@@ -32,7 +32,7 @@
                       <!-- Details Section -->
                       <h2 class="mb-3">{{ training.name }}</h2>
 
-                      <div class="mt-4" style="text-align: justify;">
+                      <div class="my-4" style="text-align: justify;">
                         {{ training.summary }}
                       </div>
                       
