--- a/courses/templates/courses/course-details.html
+++ b/courses/templates/courses/course-details.html
@@ -181,7 +181,7 @@
                                 <!-- Instructor -->
                                 <div class="tab-pane fade" id="projects__four" role="tabpanel" aria-labelledby="projects__four">
                                     <div class="blogsidebar__content__wraper__2 tab__instructor">
-                                        {% for instructor in course.instructor.all %}
+                                        {% for instructor in course.instructors.all %}
                                         <div class="blogsidebar__content__inner__2 mb-3">
 
                                             <div class="blogsidebar__img__2">
