--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -50,7 +50,7 @@
 
                 <li><a href="{% url 'intern_list' %}">Internship</a></li>
                 <li><a href="#">Thesis Support</a></li>
-                <li><a href="#">Collaboration</a></li>
+                <li><a href="{% url 'research_papers' %}">Research</a></li>
                 <li>
                   <a class="headerarea__has__dropdown" href="#">Blogs
                     <i class="icofont-rounded-down"></i>
