--- a/training/templates/training/training_list.html
+++ b/training/templates/training/training_list.html
@@ -144,7 +144,7 @@
               <div class="gridarea__content ">
                   <div class="gridarea__list">
                       <ul>
-                          <li>
+                          <li style="display: block ruby;">
                               <i class="icofont-calendar"></i> {{ training.date }}
                           </li>
                           {% comment %} <li>
