--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -49,7 +49,7 @@
                 </li>
 
                 <li><a href="{% url 'intern_list' %}">Internship</a></li>
-                <li><a href="#">Thesis Support</a></li>
+                <li><a href="{% url 'thesis_list' %}">Thesis Support</a></li>
                 <li><a href="{% url 'research_papers' %}">Research</a></li>
                 <li>
                   <a class="headerarea__has__dropdown" href="#">Blogs
