--- a/templates/partials/mobile-menu.html
+++ b/templates/partials/mobile-menu.html
@@ -13,6 +13,7 @@
             <li class="menu-item-has-children "><a href="{% url 'online_training_list' %}">Online Training</a></li><hr>
             <li class="menu-item-has-children "><a href="{% url 'intern_list' %}">Internship</a></li><hr>
             <li class="menu-item-has-children "><a href="{% url 'research_papers' %}">Research</a></li><hr>
+            <li class="menu-item-has-children "><a href="{% url 'thesis_list' %}">Thesis Support</a></li><hr>
             <li class="menu-item-has-children "><a href="{% url 'blog_list' %}">Blogs</a></li><hr>
             <li class="menu-item-has-children "><a href="{% url 'vlog_list' %}">Vlogs</a></li><hr>
             {% if user.is_authenticated %}
