--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -46,19 +46,28 @@
           </div>
         </div>
 
-        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6" data-aos="fade-up">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up">
           <div class="footerarea__inner">
             <div class="footerarea__heading">
               <h3>Map</h3>
             </div>
-            <div class="footerarea__map">
-              <!-- Google Maps Embed -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.76693727725!2d90.4877090105786!3d23.72001548985387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b70001248f2b%3A0x12e1995d85309cfa!2sDawn%20of%20Bioinformatics%20Ltd.!5e0!3m2!1sen!2sbd!4v1760424019662!5m2!1sen!2sbd"
-              width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="footerarea__map d-flex gap-2">
+
+              <div class="map-container">
+                <h6 class="text-white">Dhaka Office</h6>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.76693727725!2d90.4877090105786!3d23.72001548985387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b70001248f2b%3A0x12e1995d85309cfa!2sDawn%20of%20Bioinformatics%20Ltd.!5e0!3m2!1sen!2sbd!4v1760424019662!5m2!1sen!2sbd"
+                  width="100%" height="200" style="border:0; max-width:200px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+
+              <div class="map-container">
+                <h6 class="text-white">Chittagong Office</h6>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3689.588328725813!2d91.82798507498586!3d22.3691679403963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30acd90061645667%3A0x5fd127f0df804c55!2sDawn%20of%20Bioinformatics%20Ltd.%20Chittagong%20Branch!5e0!3m2!1sen!2sbd!4v1763318203953!5m2!1sen!2sbd"
+                  width="100%" height="200" style="border:0; max-width:200px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+
             </div>
           </div>
         </div>
-
       </div>
     </div>
 
