--- a/blog/templates/blog/thesis_list.html
+++ b/blog/templates/blog/thesis_list.html
@@ -1,42 +1,25 @@
 {% extends 'base.html' %}
-
 {% load static i18n %}
-
 
 {% block extra_css %}
 <style>
-
+.sidebar-sticky-col {
+    position: sticky;
+    top: 100px; /* distance from top when scrolling */
+    align-self: flex-start; /* prevents flex layout from breaking sticky */
+}
 </style>
 {% endblock extra_css %}
-    
 
 {% block content %}
-{% comment %} {% include 'partials/theme-switch.html' %} {% endcomment %}
 
-<main class="main_wrapper overflow-hidden">
+<main class="main_wrapper">  <!-- removed overflow-hidden -->
 
-    <!-- topbar__section__stert -->
     {% include 'partials/top-banner.html' %}
-    <!-- topbar__section__end -->
-
-    <!-- headar section start -->
     {% include 'partials/navbar.html' %}
-    <!-- header section end -->
-
-    <!-- Mobile Menu Start Here -->
     {% include 'partials/mobile-menu.html' %}
-    <!-- Mobile Menu end Here -->
-
-    <!-- theme fixed shadow -->
-    <div>
-        <div class="theme__shadow__circle"></div>
-        <div class="theme__shadow__circle shadow__right"></div>
-    </div>
-    <!-- theme fixed shadow -->
-    <!-- breadcrumbarea__section__start -->
 
     <div class="breadcrumbarea">
-
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -56,70 +39,55 @@
         </div>
 
         <div class="shape__icon__2">
-            <img loading="lazy" class=" shape__icon__img shape__icon__img__1"
-                src="{% static 'img/herobanner/herobanner__1.png' %}" alt="photo">
-            <img loading="lazy" class=" shape__icon__img shape__icon__img__2"
-                src="{% static 'img/herobanner/herobanner__2.png' %}" alt="photo">
-            <img loading="lazy" class=" shape__icon__img shape__icon__img__3"
-                src="{% static 'img/herobanner/herobanner__3.png' %}" alt="photo">
-            <img loading="lazy" class=" shape__icon__img shape__icon__img__4"
-                src="{% static 'img/herobanner/herobanner__5.png' %}" alt="photo">
+            <img loading="lazy" class="shape__icon__img shape__icon__img__1" src="{% static 'img/herobanner/herobanner__1.png' %}">
+            <img loading="lazy" class="shape__icon__img shape__icon__img__2" src="{% static 'img/herobanner/herobanner__2.png' %}">
+            <img loading="lazy" class="shape__icon__img shape__icon__img__3" src="{% static 'img/herobanner/herobanner__3.png' %}">
+            <img loading="lazy" class="shape__icon__img shape__icon__img__4" src="{% static 'img/herobanner/herobanner__5.png' %}">
         </div>
-
     </div>
-    <!-- breadcrumbarea__section__end-->
 
     <div class="container py-5">
         <div class="row">
 
-            <!-- Main Content (Thesis Posts) -->
+            <!-- Thesis Content -->
             <div class="col-xl-8 col-lg-8 mb-4">
-
-            {% if theses %}
+                {% if theses %}
                 <div class="row g-4">
-                {% for post in theses %}
+                    {% for post in theses %}
                     <div class="col-md-6">
-                    <div class="card h-100 shadow-sm border-0 rounded-4 overflow-hidden hover-shadow transition-all">
-
-                        {% if post.image %}
-                        <div class="ratio ratio-16x9">
-                        <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid"
-                            style="width: 100%; height: 100%; object-fit: cover;">
-                        </div>
-                        {% endif %}
-
-                        <div class="card-body p-4 d-flex flex-column">
-                        <h5 class="card-title mb-2">
-                            <a href="{% url 'thesis_details' post.slug %}"
-                            class="text-decoration-none text-dark fw-semibold">
-                            {{ post.title }}
-                            </a>
-                        </h5>
-
-                        <div class="flex-grow-1 text-muted post-content">
-                            {{ post.content|truncatewords_html:25|safe }}
-                        </div>
-
-                        <a href="{% url 'thesis_details' post.slug %}"
-                            class="btn btn-outline-primary w-100 mt-3">
-                            Read More →
-                        </a>
+                        <div class="card h-100 shadow-sm border-0 rounded-4 overflow-hidden hover-shadow transition-all">
+                            {% if post.image %}
+                            <div class="ratio ratio-16x9">
+                                <img src="{{ post.image.url }}" class="img-fluid" style="width:100%; height:100%; object-fit:cover;">
+                            </div>
+                            {% endif %}
+                            <div class="card-body p-4 d-flex flex-column">
+                                <h5 class="card-title mb-2">
+                                    <a href="{% url 'thesis_details' post.slug %}" class="text-decoration-none text-dark fw-semibold">
+                                        {{ post.title }}
+                                    </a>
+                                </h5>
+                                <div class="flex-grow-1 text-muted post-content">
+                                    {{ post.content|truncatewords_html:25|safe }}
+                                </div>
+                                <a href="{% url 'thesis_details' post.slug %}" class="btn btn-outline-primary w-100 mt-3">
+                                    Read More →
+                                </a>
+                            </div>
                         </div>
                     </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
                 </div>
-            {% else %}
+                {% else %}
                 <div class="text-center text-muted py-5">
-                <p>No theses support available yet.</p>
+                    <p>No theses support available yet.</p>
                 </div>
-            {% endif %}
-
+                {% endif %}
             </div>
 
-            <!-- Sidebar -->
-            <div class="col-xl-4 col-lg-4">
-                <div class="course__details__sidebar sticky-top" style="top: 90px;">
+            <!-- Sticky Sidebar -->
+            <div class="col-xl-4 col-lg-4 sidebar-sticky-col">
+                <div class="course__details__sidebar">
                     <div class="event__sidebar__wraper">
                         <div class="course__summery__button">
                             <a href="#" class="default__button">Register Now</a>
@@ -127,79 +95,29 @@
 
                         <div class="course__summery__lists">
                             <ul>
-                            <li>
-                                <div class="course__summery__item">
-                                <span class="sb_label">Duration</span>
-                                <span class="sb_content">4-6 Months</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                <span class="sb_label">Support</span>
-                                <span class="sb_content">Online & Offline</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                <span class="sb_label">Session</span>
-                                <span class="sb_content">One-to-One</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                <span class="sb_label">Type</span>
-                                <span class="sb_content">Thesis / Project</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                <span class="sb_label">Mentor</span>
-                                <span class="sb_content">Yes</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                    <span class="sb_label">Response</span>
-                                    <span class="sb_content">4 Hours / 7 Days</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                    <span class="sb_label">Software Access</span>
-                                    <span class="sb_content">Yes</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                    <span class="sb_label">Technical Support</span>
-                                    <span class="sb_content">Yes</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                    <span class="sb_label">Language</span>
-                                    <span class="sb_content">Bangla</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="course__summery__item">
-                                    <span class="sb_label">Certificate</span>
-                                    <span class="sb_content">Yes</span>
-                                </div>
-                            </li>
+                                <li><div class="course__summery__item"><span class="sb_label">Duration</span><span class="sb_content">4-6 Months</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Support</span><span class="sb_content">Online & Offline</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Session</span><span class="sb_content">One-to-One</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Type</span><span class="sb_content">Thesis / Project</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Mentor</span><span class="sb_content">Yes</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Response</span><span class="sb_content">4 Hours / 7 Days</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Software Access</span><span class="sb_content">Yes</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Technical Support</span><span class="sb_content">Yes</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Language</span><span class="sb_content">Bangla</span></div></li>
+                                <li><div class="course__summery__item"><span class="sb_label">Certificate</span><span class="sb_content">Yes</span></div></li>
                             </ul>
                         </div>
 
                         <div class="course__summery__button">
                             <p>More inquiry about course.</p>
                             <a class="default__button default__button--3" href="tel:+8801517831136">
-                            <i class="icofont-phone"></i> +880 1517 831 136
+                                <i class="icofont-phone"></i> +880 1517 831 136
                             </a>
                         </div>
-
                     </div>
                 </div>
             </div>
+            <!-- END Sticky Sidebar -->
 
         </div>
     </div>
@@ -210,9 +128,5 @@
 {% endblock %}
 
 {% block extra_javascript %}
-<script>
-</script>
+<script></script>
 {% endblock extra_javascript %}
-
-
-
