--- a/blog/templates/blog/thesis_list.html
+++ b/blog/templates/blog/thesis_list.html
@@ -90,7 +90,7 @@
                 <div class="course__details__sidebar">
                     <div class="event__sidebar__wraper">
                         <div class="course__summery__button">
-                            <a href="#" class="default__button">Register Now</a>
+                            <a href="https://forms.gle/vnWyAE8QQoUEWLKC9" class="default__button">Register Now</a>
                         </div>
 
                         <div class="course__summery__lists">
