--- a/intern/templates/intern/intern_list.html
+++ b/intern/templates/intern/intern_list.html
@@ -117,15 +117,11 @@
                         <div class="zoom__meeting__time">
                             <p>
                                 Medium :
-                                <span>{{ intern.get_medium_display }}</span>
+                                <span>Online & Offline</span>
                             </p>
                         </div>
                         <div class="zoom__meeting__id">
-                            {% if intern.platform %}
-                                <p>Platform :<span>{{ intern.get_platform_display }}</span></p>
-                            {% else %}
-                                <p>Branch :<span>{{ intern.get_branch_display }}</span></p>
-                            {% endif %}
+                            <p>Branch :<span>Dhaka / Chittagong</span></p>
                         </div>
                     </div>
                     <div class="gridarea__bottom">
