--- a/intern/templates/intern/intern_list.html
+++ b/intern/templates/intern/intern_list.html
@@ -58,8 +58,8 @@
           {% for intern in interns %}
           <tr>
             <td>{{ intern.name }}</td>
-            <td>{{ intern.get_medium_display }}</td>
-            <td>{{ intern.get_branch_display }}</td>
+            <td>Online & Offline</td>
+            <td>Dhaka / Chittagong</td>
             <td>{{ intern.date|date:"M d, Y" }}</td>
             <td>
               {% if intern.registration_link %}
