--- a/blog/templates/blog/thesis_detail.html
+++ b/blog/templates/blog/thesis_detail.html
@@ -29,8 +29,8 @@
                 </article>
 
                 <div class="d-flex justify-content-between align-items-center mt-5">
-                <a href="{% url 'blog_list' %}" class="btn btn-outline-secondary rounded-pill px-4">
-                    ← Back to Blog
+                <a href="{% url 'thesis_list' %}" class="btn btn-outline-secondary rounded-pill px-4">
+                    ← Back to Thesis Support List
                 </a>
                 <a href="#top" class="btn btn-primary rounded-pill px-4">
                     ↑ Top
