--- a/training/templates/training/training_detail.html
+++ b/training/templates/training/training_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{{ training.name }} | Training{% endblock %}
+{% comment %} {% block title %}{{ training.name }} | Training{% endblock %} {% endcomment %}
 
 {% block content %}
 <main class="main_wrapper overflow-hidden">
