--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,8 @@
       document.documentElement.classList.remove("is_dark");
     }
   </script>
-
+  
+  <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=Jlv6tCZr"></script>
 </head>
 
 <body {% block body_attribute %}class="body__wrapper"{% endblock body_attribute %}>
