--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,10 @@
       .mode_switcher.my_switcher {
         top: 140px !important;
       }
+      #scrollUp{
+        bottom: 100px !important;
+        right: 35px !important;
+      }
     </style>
     {% endblock extra_css %}
   {% endblock css %}
@@ -46,7 +50,7 @@
       document.documentElement.classList.remove("is_dark");
     }
   </script>
-  
+
   <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=Jlv6tCZr"></script>
 </head>
 
